fixed carousel container and text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,14 @@
   }
 }
 
+:root{
+  height: 100vh;
+  background: var(--color-bkg);
+}
 html,
 body {
+  height: 100vh;
+  background: var(--color-bkg);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
